--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "nixos-git-deploy",
-  "version": "1.0.0",
-  "description": "Manages your nixos configuration and remote repos",
-  "main": "index.js",
-  "scripts": {
-    "run": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "inquirer": "^9.2.1"
-  },
+  "module": "index.ts",
+  "type": "module",
   "author": "SpiderUnderUrBed",
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "commander": "^12.0.0",
+    "inquirer": "^9.2.1",
+    "simple-git": "^3.24.0"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  }
 }
