trying to add age encryption

--- a/nixos-git-deploy-go/config.json
+++ b/nixos-git-deploy-go/config.json
@@ -1,1 +1,1 @@
-{"userallowed":"n"}
+{"UserAllowed":"n","FirstTime":"n","filesToWatch":["/home/spiderunderurbed/projects/nixos-git-deploy-go/test.txt","/home/spiderunderurbed/projects/nixos-git-deploy-go/test.txt"]}
