--- a/nixos-git-deploy-go/config.json
+++ b/nixos-git-deploy-go/config.json
@@ -1,1 +1,1 @@
-{"UserAllowed":"n","FirstTime":"n","filesToWatch":["/home/spiderunderurbed/projects/nixos-git-deploy-go/test.txt","/home/spiderunderurbed/projects/nixos-git-deploy-go/test.txt"]}
+{"UserAllowed":"n","FirstTime":"n","filesToWatch":["/home/spiderunderurbed/projects/nixos-git-deploy-go/test.txt"]}
